fix(domain): stop Profile from crashing when it has no sizes
`new EnumMap<>(map)` throws IllegalArgumentException for an empty map
that is not already an EnumMap, so both the constructor and `withSize`
blew up for a profile with no sizes rows — the constructor on every
load, and `withSize` on the `/profile set size` that would have fixed
it. Neither path could recover.

Both now seed the EnumMap from the key type. Also drops the redundant
ArrayList/HashMap copies in favour of List.copyOf/Map.copyOf.